# orbit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: orbit-architecture.md  orbit-cli-commands.md  orbit-detection.md  orbit-global-config.md  orbit-metadata.md  orbit-providers.md  orbit-resolver.md  orbit-status.md  orbit-toml-spec.md  orbit-versions.md
modrinth-wrapper/: Cargo.toml  README.md
modrinth-wrapper/modrinth-docs/: overview.md
modrinth-wrapper/modrinth-docs/api-responses/: search-jei.json  search-modpack.json  search-optifine.json  search-sodium.json  version-detail.json
modrinth-wrapper/modrinth-docs/project/: dependencies.md  dependencies_response.json  get.md  get_response.json  gets.md  search.md
modrinth-wrapper/modrinth-docs/version/: get.md  gets.md  list.md  list_deps_response.json  list_response.json
modrinth-wrapper/modrinth-docs/version_file/: hash.md  hash_response.json  hashs.md  update.md  updates.md
modrinth-wrapper/src/: api.rs  client.rs  error.rs  lib.rs  models.rs
modrinth-wrapper/tests/: api_tests.rs
orbit-cli/: Cargo.toml
orbit-cli/src/: main.rs
orbit-cli/src/adaptors/: curseforge.rs  mod.rs  modrinth.rs
orbit-cli/src/cli/: mod.rs
orbit-cli/src/cli/commands/: add.rs  check.rs  export.rs  import.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  outdated.rs  purge.rs  remove.rs  search.rs  sync.rs  update.rs  upgrade.rs
orbit-cli/src/cli/commands/cache/: clean.rs  mod.rs
orbit-cli/src/cli/commands/instances/: default.rs  list.rs  remove.rs
orbit-cli/src/models/: adaptors.rs  mod.rs
orbit-cli/src/utils/: jar.rs
orbit-core/: Cargo.toml  check_err.txt
orbit-core/src/: checker.rs  config.rs  error.rs  identification.rs  init.rs  installer.rs  jar.rs  lib.rs  lockfile.rs  manifest.rs  outdated.rs  purge.rs  resolver.rs  sync.rs  workspace.rs
orbit-core/src/detection/: fabric.rs  mod.rs
orbit-core/src/jar/: fabric.rs  mod.rs
orbit-core/src/metadata/: fabric.rs  mod.rs  mojang.rs  version_profile.rs
orbit-core/src/providers/: curseforge.rs  mod.rs  modrinth.rs  rate_limiter.rs
orbit-core/src/resolver/: mod.rs  modrinth_version.rs  provider.rs  provider_version.rs  types.rs  version.rs
orbit-core/src/versions/: fabric.rs  mod.rs
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: import.rs  instances.rs  mod.rs  mods.rs  sync.rs  utils.rs
src/cli/commands/instances/: list.rs  mod.rs
