[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "3.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
modrinth-wrapper = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
