[workspace]
resolver = "2"
members = [
    "orbit-cli",
    "modrinth-wrapper",
]

[workspace.dependencies]
zip = "3.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
url = "2.5.8"

